--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                 姓名：
                             </td>
                             <td>
-                                高月文
+                                邵音子
                             </td>
                         </tr>
                         <tr>
@@ -137,7 +137,7 @@
                                 性别：
                             </td>
                             <td>
-                                女
+                                男
                             </td>
                         </tr>
                         <tr>
@@ -145,7 +145,7 @@
                                 学院：
                             </td>
                             <td>
-                                管理工程学院
+                                圣彼得堡联合工程学院
                             </td>
                         </tr>
                         <tr>
@@ -161,7 +161,7 @@
                                 班级：
                             </td>
                             <td>
-                                23应急管理
+                                23电子（中俄）
                             </td>
                         </tr>
                         <tr>
@@ -169,7 +169,7 @@
                                 学号：
                             </td>
                             <td>
-                                23140500112
+                                23200300359
                             </td>
                         </tr>
                         <tr>
@@ -177,7 +177,7 @@
                                 电话：
                             </td>
                             <td>
-                                19703322080
+                                13773558365
                             </td>
                         </tr>
                         <tr>
@@ -185,7 +185,7 @@
                                 负责辅导员：
                             </td>
                             <td>
-                                吴红岩
+                                周冰
                             </td>
                         </tr>
 
@@ -194,7 +194,7 @@
                                 宿舍地址：
                             </td>
                             <td>
-                                10B318
+                                12B401
                             </td>
                         </tr>
                         <tr>
@@ -202,7 +202,7 @@
                                 监护人姓名：
                             </td>
                             <td>
-                                高大旗
+                                倪厚文
                             </td>
                         </tr>
                         <tr>
@@ -210,7 +210,7 @@
                                 监护人电话：
                             </td>
                             <td>
-                                15162323491
+                                15050788283
                             </td>
                         </tr>
                         <tr>
@@ -218,7 +218,7 @@
                                 与本人关系：
                             </td>
                             <td>
-                                父女
+                                母子
                             </td>
                         </tr>
                         <tr>
@@ -270,7 +270,7 @@
                                 请假原因：
                             </td>
                             <td>
-                                考科四
+                                考科三
                             </td>
                         </tr>
                         <tr>
@@ -367,7 +367,7 @@
                                         15:28
                                     </td>
                                     <td>
-                                        吴红岩
+                                        周冰
                                         <br>
                                         <span style="color:#99b">辅导员</span>
                                     </td>
@@ -387,7 +387,7 @@
                                         11:21
                                     </td>
                                     <td>
-                                        高月文
+                                        邵音子
                                         <br>
                                         <span style="color:#99b">学生</span>
                                     </td>
@@ -509,3 +509,4 @@
     </script>
 </body>
 </html>
+
